[package]
name = "miniaudio-sys"
version = "0.1.0"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ma-log-level-error"]

ma-no-wasapi = []
ma-no-dsound = []
ma-no-winmm = []
ma-no-alsa = []
ma-no-pulseaudio = []
ma-no-jack = []
ma-no-coreaudio = []
ma-no-sndio = []
ma-no-audio4 = []
ma-no-oss = []
ma-no-aaudio = []
ma-no-opensl = []
ma-no-webaudio = []
ma-no-null = []
ma-no-decoding = []
ma-no-device-io = []
ma-no-stdio = []
ma-no-sse2 = []
ma-no-avx2 = []
ma-no-avx512 = []
ma-no-neon = []

ma-log-level-verbose = []
ma-log-level-info = []
ma-log-level-warning = []
ma-log-level-error = []

ma-debug-output = []

[dependencies]
libc = "0.2"
bitflags = "1.2"

[build-dependencies]
cc = "1.0"
